After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 304559 - Initial placement glitch when creating sheet objects
Initial placement glitch when creating sheet objects
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Sheet Objects
1.5.x
Other Windows
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2005-05-17 18:29 UTC by j.gnome
Modified: 2005-05-31 04:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description j.gnome 2005-05-17 18:29:32 UTC
1. New workbook
2. Select "Create a checkbox"
3. Click somewhere on the sheet and hold the mouse button down
4. Don't release the mouse button yet

What happens: the scroll bar appears in the upper left corner of the sheet 
while dragging.
Comment 1 Jody Goldberg 2005-05-31 03:49:15 UTC
I can replicate the issue.
Seems like the widget is being made visible before the bounds are being set.
Comment 2 Jody Goldberg 2005-05-31 04:42:39 UTC
fixed.