http://bugzilla.gnome.org/show_bug.cgi?id=304559 keep the view hidden

2005-05-31  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=304559
	* src/sheet-object-widget.c (sheet_object_widget_new_view) : keep the
	  view hidden until we can set the bounds